# html_im

./: .gitignore  DEPLOY.md  DEPLOY_2.md  README.md  update.sh  use.md
backend/: .env.example  Cargo.toml  DEPLOYMENT_SECURITY.md  README.md  SETUP.md
backend/migrations/: add_chat_type_to_messages.sql  add_is_admin_to_users.sql  create_groups.sql  create_messages.sql  create_sessions.sql  create_users.sql  run_migrations.bat  run_migrations.sh  setup_database.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs
backend/src/models/: group.rs  group_member.rs  message.rs  mod.rs  session.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  captcha.rs  friend.rs  group.rs  message.rs  mod.rs  upload.rs  user.rs
backend/src/websocket/: manager.rs  mod.rs  server.rs
docs/: design_document.md  report.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: style.css
frontend/src/composables/: useAuth.ts  useMessage.ts  useWebSocket.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: chat.ts  message.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
frontend/src/views/: Chat.vue  Login.vue  Register.vue
