[package]
name = "html-im-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.3"
actix-cors = "0.7"
actix = "0.13"
actix-multipart = "0.7"
actix-files = "0.6"
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
captcha = "0.0.9"
base64 = "0.21"
png = "0.17"
rand = "0.8"
